fix: fix community page footer overlap

--- a/src/assets/scss/custom/pages/_community.scss
+++ b/src/assets/scss/custom/pages/_community.scss
@@ -86,6 +86,7 @@
   }
 
   .picks {
+    margin-bottom: 100px;
     > h2 {
       font-size: 28px;
       line-height: 36px;
